# liverFEM

./: .gitignore  .gitmodules  CMakeLists.txt  QUICKSTART_MAC.md  README.md  README_MAC.md  analyze_exp2.py  analyze_exp2_final.py  analyze_exp2_native.py  analyze_exp2_simple.py  ani_hard.txt  ani_meta.txt  ani_soft.txt  build.sh  build_and_run.sh  install_deps_mac.sh  pbd_build_and_run_macos.sh  plot_anisotropy.py  plot_anisotropy_comparison.py  plot_results.py  prepare_xpbd_meshes.sh  run.sh  test_armadillo.cpp  test_new_params.cpp  test_params.cpp  tetgen  tetgen_to_xpbd_oneclick_macos.sh  vegafem_build_and_run.sh  w_crFEM_build_and_run.sh  xpbd_run_armadillo_xpbd.sh  xpbd_run_latest_tetgenfem.sh
Documents/: XPBD_vs_TetFEM_参数对照.md  conclusion.md  discussion.md  experiment1_analysis.md  experiment2_analysis.md  experiment3_analysis.md  experiment4_analysis.md  full_article.md  introduction.md  文献综述需求确认.docx  相关研究 (Related Work).docx  算法实现细节.md  肝脏模拟计划书.md
Documents/Data/各向异性，拽X和Y/: force_data_y.txt
Documents/Video/: xpbd肝变形.mov
PositionBasedDynamics/: CMakeLists.txt
PositionBasedDynamics/Demos/Common/: Simulator_GUI_imgui.cpp
PositionBasedDynamics/Demos/SceneLoaderDemo/: CMakeLists.txt  Experiment1.cpp  Experiment1.h  Experiment1XPBD.cpp  Experiment1XPBD.h  Experiment2.cpp  Experiment2.h  Experiment4.cpp  Experiment4.h  ExperimentVolumePreservation.cpp  ExperimentVolumePreservation.h  SceneLoaderDemo.cpp
PositionBasedDynamics/Simulation/: DistanceFieldCollisionDetection.cpp  TimeStepController.cpp  TimeStepController.h  kdTree.inl
PositionBasedDynamics/Utils/: TetGenLoader.cpp  Version.h
PositionBasedDynamics/cmake/: FindEigen3.cmake  GetGitRevisionDescription.cmake  PatchDiscregridOpenMP.cmake
PositionBasedDynamics/data/models/: liver.ele  liver_HD_Low.ele  liver_HD_Low.node
PositionBasedDynamics/data/scenes/: Armadillo_Exp1_XPBD.json  Liver_High_XPBD.json  Liver_Low_XPBD.json  Liver_Mid_XPBD.json  Liver_target20000_XPBD.json  Liver_target50000_XPBD.json  Liver_target5000_XPBD.json
TetgenFEM/: Experiment1.cpp  Experiment1.h  Experiment2.cpp  Experiment2.h  Experiment3.cpp  Experiment3.h  Experiment4.cpp  Experiment4.h  Group.cpp  Group.h  GroupDivision.cpp  GroupDivision.h  Object.cpp  Object.h  SimpleUI.cpp  SimpleUI.h  Tetrahedron.cpp  Tetrahedron.h  Vertex.cpp  Vertex.h  VisualOpenGL.cpp  VisualOpenGL.h  force_data_x.txt  force_hard.txt  main.cpp  parameters.txt  parameters_armadillo.txt  params.cpp  params.h  tensile_y.csv  tetgen-tmpfile_skipped.face  vbdbeam.ele  vbdbeam.node
TetgenFEM/models/: 1.stl  2.stl  3.stl  450vega.stl  Beam.1.1.ele  Beam.1.ele  Beam.1.node  README.md  armadillo.ele  armadillo.node  armadillo4ktest.ele  armadillo4ktest.node  armadillo_4k.ele  armadillo_4k.node  armadillo_4k.stl  armadillo_4k_binary.stl  armadillotest.node  ball.stl  beam.1.1.node  beam3_tet.stl  bunny.stl  bunnyFront.stl  bunnyHDLow.ele  bunnyHDLow.node  bunnyHDLow.stl  bunnyLow.stl  bunnyVert.stl  cloth.stl  cone.stl  cone2.stl  cube.ele  cube.node  cubeLarge.stl  cubeLong.geo  cubeLong.stl  cubeLong1.stl  cubeLong12000.ele  cubeLong12000.node  cubeLong1300.node  cubeLong5000.ele  (+65 more)
TetgenFEM/stls/: liver.stl  liver_HD.stl  liver_HD_Low.stl
VegaFEM/: CMakeLists.txt  cubeLong1300.config  cubeLong1300.ele  cubeLong1300.fixed.bou  cubeLong1300.lighting  cubeLong1300.veg  cubeLong1300_exp1_20251219_133522_pullVertices.bou  liver_HD_Low.config  liver_HD_Low.fixed.bou  liver_HD_Low.veg  liver_target20000.config  liver_target20000.veg  liver_target20000_v2.veg  liver_target5000.config  liver_target5000.veg  liver_target50000.config  liver_target50000.veg
VegaFEM/libraries/modalMatrix/: modalMatrixTransposed.cpp
VegaFEM/libraries/sparseSolver/: ARPACKSolver.cpp
VegaFEM/scripts/: build_run_mac.sh  convert_tetgen_to_veg.cpp  convert_tetgen_to_veg.py  make_fixed_bou.py  run_turtle_mac.sh
VegaFEM/utilities/: CMakeLists.txt
VegaFEM/utilities/interactiveDeformableSimulator/: interactiveDeformableSimulator.cpp
archive/: README.md
archive/legacy/: 0Group4000.txt  122Group4000.txt  132Group4000.txt  14000Local.txt  152Group4000.txt  1Group4000.txt  2Group4000.txt  3Group4000.txt  4Group4000.txt  5Group4000.txt  6Group4000.txt  8000Local.txt  Ani_H.txt  Ani_X.txt  Ani_Y.txt  Ani_y1=100000.txt  Ani_y1=10000000.txt  COM.txt  GroupX2.txt  GroupX4.txt  GroupX6.txt  Local4000New.txt  LocalComp.txt  VolumeLocal.txt  compX100.txt  compX100000.txt  cubeX22.txt  cubeX44.txt  cubeX66.txt  dfNorm.txt  force_data_x.txt  ourMethodResult.txt  ringY2.txt  ringY22.txt  ringY3.txt  ringY4.txt  ringY44.txt  ringY6.txt  ringY8.txt  stretchLocalFEM.txt  (+2 more)
archive/legacy/tetgenMesh/: balls3astr_12_16.poly
